--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description"
     content="Luis Rodriguez, Ingeniero de Sistemas, apasionado por la tecnología, el desarrollo de software y la optimización de procesos digitales. Con experiencia en liderar proyectos clave y mejorar la eficiencia organizacional." />
   <meta name="keywords"
-    content="Ingeniero de Sistemas, desarrollo de software, optimización de procesos, proyectos tecnológicos, soluciones digitales, Luis Rodriguez, tecnología, ingeniería, innovación" />
+    content="Ingeniero de Sistemas, desarrollo de software, optimización de procesos, proyectos tecnológicos, soluciones digitales, Luis Rodriguez, tecnología, ingeniería, innovación, Luis Alfonso Rodriguez Diaz, Luis Alfonso Rodriguez, Luis Rodriguez Diaz" />
 
   <!-- Autor y generador de la página -->
   <meta name="author" content="Luis Rodriguez" />
