--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:description"
     content="Luis Rodríguez, Ingeniero de Sistemas, apasionado por la tecnología, desarrollo de software y optimización de procesos digitales. Con experiencia en liderar proyectos clave y mejorar la eficiencia organizacional." />
   <meta property="og:url" content="https://luisrodriguez19.github.io/luisrodriguez-dev/" />
-  <meta property="og:image" content="./assets/images/luis.JPG" />
+  <meta property="og:image" content="https://luisrodriguez19.github.io/luisrodriguez-dev/assets/images/luis.JPG" />
   <meta property="og:image:alt" content="Imagen de perfil de Luis Rodriguez, Ingeniero de Sistemas" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -41,7 +41,7 @@
   <meta name="twitter:title" content="Luis Rodriguez - Ingeniero de Sistemas y Desarrollador de Software" />
   <meta name="twitter:description"
     content="Luis Rodríguez, Ingeniero de Sistemas, apasionado por la tecnología, desarrollo de software y optimización de procesos digitales. Con experiencia en liderar proyectos clave y mejorar la eficiencia organizacional." />
-  <meta name="twitter:image" content="./assets/images/luis.JPG" />
+  <meta name="twitter:image" content="https://luisrodriguez19.github.io/luisrodriguez-dev/assets/images/luis.JPG" />
   <meta name="twitter:image:alt" content="Imagen de perfil de Luis Rodriguez, Ingeniero de Sistemas" />
 
   <!-- Fuentes y estilos de Bootstrap y otros recursos -->
@@ -172,7 +172,7 @@
             </div> -->
 
 
-            <div class="tab-pane fade show active fade-up mt-5 pt-5" id="home-tab-pane" role="tabpanel"
+            <div class="tab-pane fade show active fade-up mt-md-5 pt-md-5" id="home-tab-pane" role="tabpanel"
               aria-labelledby="home-tab" tabindex="0">
               <div class="d-flex flex-wrap flex-md-nowrap flex-column-reverse flex-md-row">
                 <div class="flex-grow-1 w-100 text-center text-md-start">
