Update margin  and padding
Update margin  and padding

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade  fade-up mt-5 pt-5" id="profile-tab-pane" role="tabpanel"
+            <div class="tab-pane fade  fade-up mt-md-5 pt-md-5" id="profile-tab-pane" role="tabpanel"
               aria-labelledby="profile-tab" tabindex="0">
               <div class="d-flex flex-wrap flex-md-nowrap flex-column-reverse flex-md-row">
                 <div class="flex-grow-1 w-100 text-center text-md-start">
@@ -489,7 +489,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade fade-up mt-5 pt-5" id="portfolio-tab-pane" role="tabpanel"
+            <div class="tab-pane fade fade-up mt-md-5 pt-md-5" id="portfolio-tab-pane" role="tabpanel"
               aria-labelledby="portfolio-tab" tabindex="0">
               <h1>Mi portafolio</h1>
               <div class="d-flex justify-content-evenly flex-wrap">
@@ -551,14 +551,14 @@
 
               </div>
             </div>
-            <div class="tab-pane fade fade-up mt-5 pt-5" id="resume-tab-pane" role="tabpanel"
+            <div class="tab-pane fade fade-up mt-md-5 pt-md-5" id="resume-tab-pane" role="tabpanel"
               aria-labelledby="resume-tab" tabindex="0">
               <h1>Mi hoja de vida</h1>
               <iframe src="./assets/files/pdf/Hojadevidaluis.pdf" width="100%" height="600px" frameborder="0"
                 allowfullscreen></iframe>
 
             </div>
-            <div class="tab-pane fade mt-5 pt-5" id="blog-tab-pane" role="tabpanel" aria-labelledby="blog-tab"
+            <div class="tab-pane fade mt-md-5 pt-md-5" id="blog-tab-pane" role="tabpanel" aria-labelledby="blog-tab"
               tabindex="0">
               <h1 class="text-center mb-4">Blog y otras cosas</h1>
               <p class="text-center mb-4">Te doy la bienvenida a mi blog. Aquí estaré publicando novedades sobre mi
@@ -626,7 +626,7 @@
               </div>
             </div>
 
-            <div class="tab-pane fade mt-5 pt-5" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab"
+            <div class="tab-pane fade mt-md-5 pt-md-5" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab"
               tabindex="0">
               <h1 class="text-center mb-4">Formulario de Contacto</h1>
               <p class="text-center mb-4">Aquí puedes ponerte en contacto conmigo para cualquier
